# bookitem

./: .gitignore  API_TESTING.md  CHANGELOG.md  CLICK_MODE_OPTIMIZATION.md  DOCS.md  FEATURES.md  FIXES.md  INSTALL_NODE.md  MOBILE_OPTIMIZATION.md  PROJECT_FILES.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  REFACTORING_GUIDE.md  RUN_STATUS.md  TIMELINE_BOOKING.md  TIMEZONE_FIX.md  TIMEZONE_FIX_V2.md  UI_OPTIMIZATION.md  deploy.sh  nginx.conf.example  run_backend.sh  run_frontend.sh  start.bat  start.sh  test_api_simple.py
backend/: database.py  init_data.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  seed_data.py
backend/routers/: bookings.py  rooms.py  users.py
backend/services/: booking_service.py  room_service.py  user_service.py
backend/utils/: timezone.py  validators.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/components/: ResponsiveTable.vue  TimelineSelector.vue
frontend/src/composables/: useBookingData.js  useTimelineSelection.js
frontend/src/constants/: booking.js
frontend/src/router/: index.js
frontend/src/styles/: mobile.css
frontend/src/utils/: timeUtils.js
frontend/src/views/: Bookings.vue  Home.vue  NetworkDebug.vue  RoomBooking.vue  Rooms.vue  Users.vue
