[project]
name = "booking-system-backend"
version = "1.0.0"
description = "会议室预约系统后端"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "passlib==1.7.4",
    "python-jose==3.3.0",
    "bcrypt==4.1.1",
    "pydantic-settings==2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

